...
        <item android:id="@+id/nav_item_mail"
            android:icon="@drawable/ic_mail"
            android:title="Email" />

    </group>
    <item
        android:id="@+id/itemfun"
        android:title="Funzionalità">
        <menu>
            <item
                android:id="@+id/nav_item_search"
                android:icon="@drawable/ic_image_search_24"
                android:onClick="avviaRiconoscimento"
                android:title="Avvia riconoscimento facciale" />
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_person"
                android:onClick="logout"
                android:orderInCategory="100"
                android:title="Logout"
                app:showAsAction="never" />

...
